# WeChat

./: CMakeLists.txt  P2PClient.cpp  P2PClient.h  main.cpp  wechat.db
MyWeChat_Client/: AddFriendConfirmDialog.qml  AudioManager.cpp  AudioManager.h  CMakeLists.txt  ChatSession.cpp  ChatSession.h  CommunicationController.cpp  CommunicationController.h  ComplianceController.cpp  ComplianceController.h  Main.cpp  Main.qml  MediaSessionController.cpp  MediaSessionController.h  MessageStorage.cpp  MessageStorage.h  Netizen.cpp  Netizen.h  NetizenChatUI.qml  NetworkManager.cpp  NetworkManager.h  P2PClient.cpp  P2PClient.h  SearchUserDialog.qml  SetRemarkDialog.qml  main.cpp
MyWeChat_Server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  DBManager.cpp  DBManager.h  DBNanager.cpp  DBNanager.h  main.cpp
WeChat/: 大型软件开发-WeChat项目文档.odt  用况图和参与者.vsdx
